# advent-of-code-2019

./: CMakeLists.txt  Makefile  README.md
day1/: CMakeLists.txt  README.md  main.c  test.c
day1/FuelCounterUpper/: FuelCounterUpper.c  FuelCounterUpper.h
day2/: CMakeLists.txt  README.md  main.c  test.c
day2/Intcode/: Intcode.c  Intcode.h
